WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74780
Radical sign drawn incorrectly due to refactoring typo
https://bugs.webkit.org/show_bug.cgi?id=74780
Summary
Radical sign drawn incorrectly due to refactoring typo
Dave Barton
Reported
2011-12-16 21:23:50 PST
Radical sign drawn incorrectly due to refactoring typo
Attachments
Patch
(1.94 KB, patch)
2011-12-16 21:31 PST
,
Dave Barton
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Barton
Comment 1
2011-12-16 21:31:16 PST
Created
attachment 119713
[details]
Patch
mitz
Comment 2
2011-12-17 10:52:10 PST
Fixed in <
http://trac.webkit.org/r103151
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug