Radical sign drawn incorrectly due to refactoring typo https://bugs.webkit.org/show_bug.cgi?id=74780

Patch by David Barton <dbarton@mathscribe.com> on 2011-12-17
Reviewed by Dan Bernstein.

LayoutTests/mathml/presentation/roots.xhtml shows the bug, but apparently its .png
checksum is ok so run-webkit-tests can't detect the problem.

* rendering/mathml/RenderMathMLRoot.cpp:
(WebCore::RenderMathMLRoot::paint):
In revision 88250, one paintOffset should have been adjustedPaintOffset.



Canonical link: https://commits.webkit.org/91515@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103151 268f45cc-cd09-0410-ab3c-d52691b4dbfc